--- a/view/TeilebestandPanel.form
+++ b/view/TeilebestandPanel.form
@@ -25,29 +25,29 @@
               <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblFreitextsuche" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="jTextField1" min="-2" pref="196" max="-2" attributes="0"/>
+                      <Component id="txfFreitextsuche" min="-2" pref="196" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="jButton3" min="-2" pref="118" max="-2" attributes="0"/>
+                      <Component id="btnSuchen" min="-2" pref="118" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="291" max="-2" attributes="0"/>
-                      <Component id="filternButton" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnFiltern" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnFilterZurücksetzen" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblAktionSelektiert" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="teilAendernButton" min="-2" pref="151" max="-2" attributes="0"/>
+                      <Component id="btnTeilAendern" min="-2" pref="151" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="teilLoschenButton" min="-2" pref="151" max="-2" attributes="0"/>
+                      <Component id="btnTeilLoschen" min="-2" pref="151" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="149" max="-2" attributes="0"/>
-                      <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblTeilebestandErweitern" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="neuesTeilButton" min="-2" pref="180" max="-2" attributes="0"/>
+                      <Component id="btnNeuesTeil" min="-2" pref="180" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jLabel1" min="-2" pref="151" max="-2" attributes="0"/>
-                  <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
+                  <Component id="lblTeilebestand" min="-2" pref="151" max="-2" attributes="0"/>
+                  <Component id="scpMain" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -57,24 +57,24 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
-              <Component id="jLabel1" min="-2" pref="25" max="-2" attributes="0"/>
+              <Component id="lblTeilebestand" min="-2" pref="25" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jButton3" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jTextField1" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jButton1" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                  <Component id="filternButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnSuchen" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="txfFreitextsuche" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblFreitextsuche" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnFilterZurücksetzen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                  <Component id="btnFiltern" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="470" max="-2" attributes="0"/>
+              <Component id="scpMain" min="-2" pref="470" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel10" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="teilAendernButton" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="teilLoschenButton" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel11" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="neuesTeilButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblAktionSelektiert" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnTeilAendern" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnTeilLoschen" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblTeilebestandErweitern" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnNeuesTeil" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="364" max="-2" attributes="0"/>
           </Group>
@@ -82,7 +82,7 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="jLabel1">
+    <Component class="javax.swing.JLabel" name="lblTeilebestand">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Dialog" size="18" style="1"/>
@@ -90,20 +90,20 @@
         <Property name="text" type="java.lang.String" value="Teilebestand"/>
       </Properties>
     </Component>
-    <Container class="javax.swing.JScrollPane" name="jScrollPane1">
+    <Container class="javax.swing.JScrollPane" name="scpMain">
       <AuxValues>
         <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
       </AuxValues>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="jTable1">
+        <Component class="javax.swing.JTable" name="tblMain">
           <Properties>
-            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor" postCode="setTableWidths(jTable1);">
+            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor" postCode="setTableWidths(tblMain);">
               <Connection code="tm" type="code"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Default Cursor"/>
+              <Color id="Standardcursor"/>
             </Property>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
@@ -115,66 +115,66 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JButton" name="neuesTeilButton">
+    <Component class="javax.swing.JButton" name="btnNeuesTeil">
       <Properties>
         <Property name="text" type="java.lang.String" value="Neues Teil anlegen"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="neuesTeilButtonActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNeuesTeilActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton3">
+    <Component class="javax.swing.JButton" name="btnSuchen">
       <Properties>
         <Property name="text" type="java.lang.String" value="suchen"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSuchenActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="teilAendernButton">
+    <Component class="javax.swing.JButton" name="btnTeilAendern">
       <Properties>
         <Property name="text" type="java.lang.String" value="Teil bearbeiten"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="teilAendernButtonActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTeilAendernActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField1">
+    <Component class="javax.swing.JTextField" name="txfFreitextsuche">
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel2">
+    <Component class="javax.swing.JLabel" name="lblFreitextsuche">
       <Properties>
         <Property name="text" type="java.lang.String" value="Freitextsuche:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel10">
+    <Component class="javax.swing.JLabel" name="lblAktionSelektiert">
       <Properties>
         <Property name="text" type="java.lang.String" value="Aktionen selektiert:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="teilLoschenButton">
+    <Component class="javax.swing.JButton" name="btnTeilLoschen">
       <Properties>
         <Property name="text" type="java.lang.String" value="Teil l&#xf6;schen"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="teilLoschenButtonActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTeilLoschenActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel11">
+    <Component class="javax.swing.JLabel" name="lblTeilebestandErweitern">
       <Properties>
         <Property name="text" type="java.lang.String" value="Teilebestand erweitern:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="btnFilterZur&#xfc;cksetzen">
       <Properties>
         <Property name="text" type="java.lang.String" value="Filter zur&#xfc;cksetzen"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="filternButton">
+    <Component class="javax.swing.JButton" name="btnFiltern">
       <Properties>
         <Property name="text" type="java.lang.String" value="Filtern"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="filternButtonActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnFilternActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
